<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".FuturlarmList.FuturlarmDetailActivity">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#D5892D">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/futurlarmDetails"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/futurlarmNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/EditTextDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/futurlarmNameLabel"
            android:ems="15"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/senderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/sender"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/TextViewDetailSender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/senderLabel"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/date"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/EditTextDetailDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/dateLabel"
            android:ems="15"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/time"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/EditTextDetailTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/timeLabel"
            android:ems="15"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/typeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/type"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/SpinnerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/typeLabel"
            android:layout_centerVertical="true"
            android:layout_margin="10dp">
        </Spinner>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </RelativeLayout>

    <RadioButton
        android:id="@+id/ButtonDetailImportant"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:text="@string/important"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textColor="#002F55"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/ButtonFuturlarmDetailApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/apply"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/ButtonFuturlarmDetailCancel"
            android:background="@drawable/light_blue_rounded_corner_button"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/ButtonFuturlarmDetailCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/yellow_rounded_corner_button"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="#002F55"
            android:textStyle="bold"/>
    </RelativeLayout>
</LinearLayout>